update the comment

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                   <li><a class="dropdown-item" href="#">laptop</a></li>
                 </ul>
               </li>
+              <!-- this is all brand -->
               <li><a href="#">All brands</a></li>
               <li><a href="#">Buy</a></li>
               <li><a href="#">More</a></li>
