Changing the home language

--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
       <div class="table-cell">
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
-          <h1 class="text-light h5 d-flex">Bonjour et bienvenu(e)!</h1>
-          <h1 class="text-light h5 d-flex">Mon nom est</h1>
+          <h1 class="text-light h5 d-flex">Hello and welcome!</h1>
+          <h1 class="text-light h5 d-flex">my name is</h1>
           <h4 class="hero-title mb-1 d-flex mx-3 h5">Daniel Iragi</h4>
-          <p class="d-flex h3"><span class="h3">Je suis un&nbsp;</span><span class="typed h3 text-danger" data-typed-items="Dev.Front-end, Freelancer, Entrepreneur, youtubeur"></span></p>
-          <button type="button" class="btn btn-outline-danger float-start">Engagez-moi</button>
+          <p class="d-flex h3"><span class="h3">I'm a&nbsp;</span><span class="typed h3 text-danger" data-typed-items="Dev.Front-end, Freelancer, Entrepreneur, youtubeur"></span></p>
+          <button type="button" class="btn btn-outline-danger float-start">Hire me</button>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
